--- a/backend/templates/register.html
+++ b/backend/templates/register.html
@@ -31,6 +31,7 @@
             font-weight: bold;
         }
         input[type="text"],
+        input[type="email"],
         input[type="password"] {
             width: 100%;
             padding: 10px;
@@ -84,6 +85,9 @@
         <form method="POST" action="{{ url_for('register') }}">
             <label for="username">Username:</label>
             <input type="text" name="username" id="username" required>
+
+            <label for="email">Email:</label>
+            <input type="email" name="email" id="email" required>
 
             <label for="password">Password:</label>
             <input type="password" name="password" id="password" required>
